# mcp-gateway

./: .dockerignore  .gitignore  .gitleaksignore  .license-scope-exclude  .mit-core-allowlist  .trivyignore  ARCHITECTURE.md  AUTHORSHIP.md  CHANGELOG.md  CLA.md  CLAUDE.md  CLAUDE.original.md  CLI_INTEGRATION_VALIDATOR.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY_ISSUE_47.md  INTEGRATION_GUIDE_ISSUE_47.md  LICENSE  LICENSE-EE.md  LICENSES.md  Makefile  NOTICE.md  README.md  RISK-ACCEPTANCE.md  SECURITY.md  codebase-map.md  demo.tape  gateway.example.yaml  llms.txt  pyproject.toml  server.json  smithery.yaml
.claude-plugin/: plugin.json
.claude-plugin/hooks/: gateway-attribution.sh
.github/: PULL_REQUEST_TEMPLATE.md  osv-scanner.toml
.github/ISSUE_TEMPLATE/: bug_report.md  capability_request.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
.mypy_cache/3.14/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _interpqueues.data.json  _interpqueues.meta.json  _interpreters.data.json  _interpreters.meta.json  (+296 more)
.qwen/skills/: SKILL.md
benches/: agent_runtime_bench.rs  gateway_benchmarks.rs
benchmarks/: public_claims.json  token_savings.py
capabilities/: README.md
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: lib.rs
crates/mcp-gateway-operator/: Cargo.toml
crates/mcp-gateway-operator/src/: crd.rs  main.rs
crates/mcp-gateway-operator/src/operator/: gateway.rs  mcpserver.rs  mod.rs  policy.rs  runtimeprofile.rs  status.rs  trustcardreference.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHAIN-OF-TITLE-ANALYSIS.md  COMMUNITY_REGISTRY.md  COUNSEL-OPINIONS-v3.3.0.md  DEPLOYMENT.md  DISTRIBUTION.md  INTELLIGENCE_DESIGN.md  LEGAL-REVIEW-BRIEF-v3.3.0.md  OAUTH_CONFIG.md  OPENAPI_IMPORT.md  OWASP_AGENTIC_AI_COMPLIANCE.md  PROTOCOL_IMPORTS.md  QUICKSTART.md  REMOTE_BACKENDS.md  SHADOW_SCAN.md  UPGRADING-3.0.md  adaptive_ranking.md  always-load-pins.md  catalog_trust_lab.md  context_integrity_kernel.md  control_plane.md  identity_grants.md  issue-73-impl-plan.md  kubernetes.md  launch_checklist.md  release-notes-3.0.0.md  show-hn.md  test-report-code-mode-profiles.md  token-exchange-live-walkthrough.md  trustcard.md  ts7-jsdoc-narrowing-spike.md  whats-new-v3.1-identity.md
examples/: claude-desktop.json  config-bundles.yaml  config-fulcrum.yaml  cursor-settings.json  gateway-full.yaml  gateway-minimal.yaml  mcp-gateway-plugin-bundle.yaml  minimal.yaml  per-client-tool-scopes.yaml  plugin-backend-roster.yaml  runtime-providers.yaml  servers.yaml  token-exchange-live.yaml  validator_demo.rs
homebrew/: mcp-gateway.rb
hooks/: gateway-attribution.sh
manifests/: slack_app_manifest.yaml
npm/: package.json  run.js
playbooks/: research.yaml
registry/: index.json
scripts/: check_quality.sh
service/: com.hebb.slack-control.plist
src/: acp_server_mode.rs  agent_runtime.rs  attestation.rs  attestation_tests.rs  autotag.rs  cache.rs  cache_key.rs  cli.rs  command_line.rs  config.rs  config_persistence.rs  context_compression.rs  error.rs  fs_lock.rs  hashing.rs  idempotency.rs  identity_grants.rs  identity_grants_tests.rs  kill_switch.rs  kubernetes.rs  lib.rs  main.rs  main_tests.rs  metrics.rs  playbook.rs  ranking.rs  registry.rs  secret_injection.rs  secrets.rs  session_sandbox.rs  session_sandbox_tests.rs  simhash.rs  simhash_tests.rs  slack.rs  stats.rs  tool_registry.rs  transform.rs  transition.rs  tunnel.rs  webwright_spike.rs
tests/: INTEGRATION_TESTS.md  agent_runtime_composability.rs  auth_tests.rs  backend_tests.rs  circuit_breaker_integration.rs  cli_config_export.rs  cli_secret_redaction.rs  conftest.py  cross_feature_tests.rs  discovery_tests.rs  firewall_integration.rs  heygen_connector_tests.rs  identity_propagation.rs  integration.rs  integration_tests.rs  kubernetes_manifest_tests.rs  mik_3025_acs.rs  mik_3025_shamash_comparison.rs  mik_3160_acs.rs  mik_4625_acs.rs  mik_5031_acs.rs  mik_5198_acs.rs  mik_5205_acs.rs  mik_5219_acs.rs  mik_5223_acs.rs  mik_5226_acs.rs  mik_5843_acs.rs  mik_5843_willow_competitive_docs.rs  mik_6119_acs.rs  mik_6207_acs.rs  mik_6208_acs.rs  mik_6264_acs.rs  mik_6273_acs.rs  mik_6550_acs.rs  mik_6550_roadmap.rs  mik_6554_acs.rs  mik_6555_acs.rs  mik_6556_acs.rs  mik_6556_trust_cbom.rs  mik_6558_acs.rs  (+27 more)
tools/: agent-bus-demo.sh
(+14495 files in other folders)
