[package]
name = "gateway-core"  
version = "0.1.0"
edition = "2021"
authors = ["Mikko Parkkola <mikko.parkkola@iki.fi>"]
description = "MCP gateway core library — tool discovery and routing primitives"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/MikkoParkkola/mcp-gateway"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
